--- a/pizza_order.html
+++ b/pizza_order.html
@@ -63,7 +63,7 @@
     <label for="add">Additional Note:</label><br>
     <textarea name="add" id="add"></textarea><br><br>
 
-    <input type="submit"value="submit"><br>
+    <input type="submit"value="submit"><br><br>
 
 </form>
 </html>
